# Vision-Language-Action-Implementation

./: .gitignore  Makefile  README.md  TABLE.PY  docker-compose.yml  main.py  perception.py  projection.py.py  pyproject.toml  run.py
Docker/: .dockerignore  DOCKER_README.md  Dockerfile
Docker/scripts/: docker-setup.sh
src/: perception.py  pipeline.py  projection.py  robot_control.py
starter_code/: sim_env.py
urdf/: bowl.urdf  create_bowl_urdf.py
